--- a/configs/train_front3d.yaml
+++ b/configs/train_front3d.yaml
@@ -16,20 +16,20 @@ eval:
   
 device:
   use_gpu: True
-  gpu_ids: '0,1,2'                          # multi-gpu train, e.g. '3,6' will use 3st and 6st gpus
+  gpu_ids: '0,2,3,4,5,6,7'                          # multi-gpu train, e.g. '3,6' will use 3st and 6st gpus
 
 data:
   dataset: FRONT3D
   img_res: [484, 648]                   # dataset image resolution [H, W], FRONT [484, 648], Replica [512, 512]
-  data_path: data/FRONT3D
+  data_path: /data/zubair/ssr/FRONT3D
   split_dir: ./dataset
-  sdf_path: data/FRONT3D/gt-sdf
+  sdf_path: /data/zubair/ssr/FRONT3D/gt-sdf
   train_class_name: ['desk', 'dresser', 'sofa', 'bed', 'bookshelf', 'cabinet', 'desk', 'dresser', 'chair', 'night_stand', 'table', 'desk', 'dresser']
   test_class_name: 'colormesh'
   load_dynamic: True                    # True:load the data dynamically, False:store them in the memory firstly
   trial: False                          # only use 200 split
   batch_size:
-    train: 48
+    train: 64
     val: 8
     test: 1
   num_workers: 16
